Avance 1 de js, botones funcionales. Algo le pasó al texto en el css T_T

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,7 +3,7 @@ body {
   font-family: sans-serif;
   box-sizing: border-box;
   background: #333;
-  overflow: hidden;
+  overflow: auto;
 }
 
 /*MENU*/
@@ -25,7 +25,7 @@ body {
   display: inline-block;
   margin: auto 15px;
   font-size: 18px;
-  font-weight: 700;
+  font-weight: 500;
   transition: all 0.7s;
 }
 
@@ -41,11 +41,11 @@ body {
   text-align: center;
   width: 100%;
   height: 25%;
+  margin: 10px 20px;
   display: inline-block;
 }
 
 /*Container of each photo*/
-/*class used on JS*/
 .panda-pic {
   position: relative;
   display: inline-block;
@@ -58,7 +58,7 @@ body {
   max-width: 100%;
   height: 190px;
   max-height: 100%;
-  border: 10px solid lightgray;
+  border: 7px solid lightgray;
 }
 
 /*Close X*/
@@ -83,7 +83,7 @@ body {
 /*INFO section*/
 #info {
   text-align: center;
-  margin: 20px 20px;
+  margin: 15px 20px;
   width: 100%;
 }
 
@@ -105,11 +105,18 @@ body {
 }
 
 /*articles style*/
-#info article {
-  text-align: justify;
-  color: #f1f1f1;
+#info .articles {
   display: inline-block;
-  margin: 40px 30px;
-  width: 38%;
+  color: #f1f1f1;
+  width: 100%;
+  margin: auto 20px;
+}
+
+#info .articles div {
+  visibility: visible;
+  display: inline-block;
+  text-align: justify;
+  margin: 20px;
+  padding: auto 30px;
 }
 /*End INFO*/
