Texto arreglado. Estilo del menú mejorado para que sea igual al ejemplo. Trabajando en el README

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,13 +21,16 @@ body {
 
 #menu li {
   background: none;
-  color: #f1f1f1;
   list-style: none;
   display: inline-block;
-  margin: auto 20px;
+  margin: auto 21px;
   font-size: 18px;
   font-weight: 500;
   transition: all 0.7s;
+}
+
+#menu li a {
+  color: #f1f1f1;
 }
 
 #menu li:hover {
@@ -85,7 +88,7 @@ body {
 /*INFO section*/
 #info {
   text-align: center;
-  margin: 15px 20px;
+  margin: 10px 20px;
   width: 100%;
 }
 
@@ -114,6 +117,6 @@ body {
    white-space: pre-line;
    margin: 0 30px;
    width: 38%;
-   font-size: 14px;
+   font-size: 13px;
   }
 /*End INFO*/
